--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^1.12.0",
+    "@auth0/nextjs-auth0": "^1.9.2",
     "next": "^12.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
