--- a/.env
+++ b/.env
@@ -3,3 +3,15 @@ AUTH0_BASE_URL='http://crowdcreators.netlify.app'
 AUTH0_ISSUER_BASE_URL='https://dev-73uj4ht47em2or67.us.auth0.com'
 AUTH0_CLIENT_ID='l98UNNrPNTMhwFrv456Ft2xbBEGr0Ry3'
 AUTH0_CLIENT_SECRET='FlSavFDtSXUtgV1BC7NjHv9ZAYxN7OHP8hKmNXukIhTBW_s09i7I_S6TupUwgh-N'
+DATABASE_URL='file:db/cc.db'
+TOKEN_SECRET='FlSavFDtSXUtgV1BC7NjHv9ZAYxN7OHP8hKmNXukIhTBW_s09i7I_S6TupUwgh-N'
+GITHUB_ID='468e8ad06e7567f6ccc3'
+GITHUB_SECRET='b0518fb188deb2f3c1dae457ad6af72b54af6f5b'
+TWITTER_ID=
+TWITTER_SECRET=
+EMAIL_SERVER_USER=
+EMAIL_SERVER_PASSWORD=
+EMAIL_SERVER_HOST=
+EMAIL_SERVER_PORT=
+EMAIL_FROM=
+NEXTAUTH_URL=https://crowdcreators.netlify.app
