--- a/package.json
+++ b/package.json
@@ -9,14 +9,43 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth0/auth0-react": "^1.12.0",
-    "@auth0/nextjs-auth0": "^1.9.2",
+    "@hapi/iron": "^7.0.0",
+    "@prisma/client": "^4.5.0",
+    "@quixo3/prisma-session-store": "^3.1.10",
+    "connect-sqlite3": "^0.9.13",
+    "cookie": "^0.5.0",
+    "cookie-cutter": "^0.2.0",
+    "cookie-session": "^2.0.0",
+    "cookies": "^0.8.0",
+    "crypto-js": "^4.1.1",
+    "express-session": "^1.17.3",
+    "formik": "^2.2.9",
+    "micro-redirect": "^1.0.2",
     "next": "^12.3.1",
+    "next-auth": "^4.15.0",
+    "next-connect": "^0.13.0",
+    "next-cookies": "^2.0.3",
+    "nodemailer": "^6.8.0",
+    "passport": "^0.6.0",
+    "passport-github": "^1.1.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-json": "^1.2.0",
+    "passport-local": "^1.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "swr": "^1.3.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/connect-sqlite3": "^0.9.1",
+    "@types/cookie-session": "^2.0.44",
+    "@types/cookies": "^0.7.7",
+    "@types/crypto-js": "^4.1.1",
+    "@types/express-session": "^1.17.5",
     "@types/node": "18.11.4",
+    "@types/passport": "^1.0.11",
+    "@types/passport-github": "^1.1.7",
+    "@types/passport-local": "^1.0.34",
     "@types/react": "18.0.22",
     "@types/react-dom": "18.0.7",
     "eslint": "8.26.0",
